add anchor tags to buttons

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 						<div class="content">
 							<h3>RentLords</h3>
 							<p>In this application, landlords and tenants connect to discuss any issues with the property. Landlords can easily stay on top of problems and notify their tenants once they recieved the complaint and when it is completed.</p>
-									<button class="git">View on Github</button>
-									<button>View Live Version</button>
+							<a href="https://github.com/jblack186/rentlords" ><button class="git" >View on Github </button></a>
+							<a href="https://floating-lake-21994.herokuapp.com/login" ><button>View Live Version</button></a>
 
 		
 						</div>
@@ -83,8 +83,8 @@
 						<div class="content">
 							<h3>ShirtTown</h3>
 							<p>This eccommerce site was built with React on the front end and SQL on the backend. </p>
-							<button class='git'>View on Github</button>
-							<button>View Live Version</button>
+							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
+							<a href="https://distracted-lewin-85da4c.netlify.app" ><button>View Live Version</button></a>
 					<li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
 							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li>
 
