--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Send A Message" /></li>
 								</ul>
 							</div>
 						</div>
