--- a/index.html
+++ b/index.html
@@ -238,16 +238,16 @@
 					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
 					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
 
-					<form method="post" action="form.php">
+					<form method="post" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc1O_aafayH8TkV7cUR33qJAbMLueK415ZWtjKv2Ozp7TqthQ/formResponse">
 						<div class="row">
 							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" required/>
+								<input type="text" name="entry.1881916804" placeholder="Name" required/>
 							</div>
 							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" required/>
+								<input type="email" name="entry.461559864" placeholder="Email" required/>
 							</div>
 							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6" required></textarea>
+								<textarea name="entry.2091216599" placeholder="Message" rows="6" required></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions special">
@@ -256,7 +256,7 @@
 							</div>
 						</div>
 					</form>
-					
+
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
