changed button back

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions special">
-									<input type="reset" value="Send A Message">
+									<input type="submit" value="Send A Message">
 								</ul>
 							</div>
 						</div>
