--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-
+		<div id="wrapper">
+			<section class="intro">
+				<header>
+					<h1>Hi,</h1>
+					<p>My name is Jamison. Creating value with code is what I'm passionate about.</p>
+					<ul class="actions">
+						<!-- <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li> -->
+					</ul>
+				</header>
+				<div class="content">
+					<span class="image fill" data-position="center"><img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" /></span>
+				</div>
+			</section>
+		</div>
 		<!-- Header -->
 			<div id="header">
-				<h1>Building Products with Passion.</h1>
-				<p>My name is Jamison. Check out my portfolio and see if my skills fit your needs.</p>
+				<!-- <h1>Building Products with Passion.</h1> -->
+				<!-- <p>My name is Jamison. Check out my portfolio and see if my skills fit your needs.</p> -->
 			</div>
 
 		<!-- Main -->
@@ -28,9 +41,9 @@
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 		
-					<h2>Reactjs, CSS3
+					<h2>ReactJS, HTML5, CSS3
 					<br />
-					Nodejs, MongoDB, SQL,
+					NodeJS, Express, MongoDB, SQL,
 					<br />
 					Git Version Control, </h2>
 					<!--
@@ -46,7 +59,7 @@
 							<h3>RentLords</h3>
 							<p>In this application, landlords and tenants connect to discuss any issues with the property. Landlords can easily stay on top of problems and notify their tenants once they recieved the complaint and when it is completed.</p>
 							<a href="https://github.com/jblack186/rentlords" ><button class="git" >View on Github </button></a>
-							<a href="https://floating-lake-21994.herokuapp.com/login" ><button>View Live Version</button></a>
+							<a href="https://floating-lake-21994.herokuapp.com/login"><button class="live">View Live Version</button></a>
 
 		
 						</div>
@@ -57,7 +70,7 @@
 							<h3>ShirtTown</h3>
 							<p>This eccommerce site was built with React on the front end and SQL on the backend. </p>
 							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
-							<a href="https://distracted-lewin-85da4c.netlify.app" ><button>View Live Version</button></a>
+							<a href="https://distracted-lewin-85da4c.netlify.app" ><button class='live'>View Live Version</button></a>
 					<li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
 							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li>
 
@@ -218,8 +231,9 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>About Me</h3>
+					<p>I started my coding adventure by studying javascript. I then dived into html and css shortly. Not soon after I 
+						decided that I wanted to increase my programming knowledge and joined Lambda School. A year and a half after that decision, I can honestly say that I have no regrets. </p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
