--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<h3>ShirtTown</h3>
 							<p>This eccommerce site was built with React on the front end and SQL on the backend. </p>
 							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
-							<a href="https://distracted-lewin-85da4c.netlify.app" ><button class='live'>View Live Version</button></a>
+							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
 					<li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
 							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li>
 
