--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 		
-					<h2>ReactJS, HTML5, CSS3
+					<h2>ReactJS, HTML5, CSS3, LESS/SASS
 					<br />
-					NodeJS, Express, MongoDB, SQL,
+					NodeJS, Express, MongoDB, SQL, Knex, Bcrypt
 					<br />
-					Git Version Control, </h2>
+					Git Version Control, Netlify, Heroku, Postman</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
