took some skills off

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 		
 					<h2>ReactJS, HTML5, CSS3, LESS/SASS
 					<br />
-					NodeJS, Express, MongoDB, SQL, Knex, Bcrypt
+					NodeJS, Express, MongoDB, SQL, Knex
 					<br />
-					Git Version Control, Netlify, Heroku, Postman</h2>
+					Git Version Control, Netlify, Heroku</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
