polishing up a bit

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
 				<header class="major container medium">
 						<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/jblack186" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 		
 					<h2>ReactJS, HTML5, CSS3, LESS/SASS
@@ -71,8 +70,8 @@
 							<p>This eccommerce site was built with React on the front end and SQL on the backend. </p>
 							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
 							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
-					<li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
-							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li>
+					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
+							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
 
 
 
@@ -88,9 +87,9 @@
 				</div>
 
 				<!--
-				<!-- <div class="box container">
+				 <div class="box container">
 					<header>
-						<!-- <h2>A lot of generic stuff</h2>
+						<h2>A lot of generic stuff</h2>
 					</header>
 					<section>
 						<header>
@@ -227,15 +226,14 @@
 							</div>
 						</form>
 					</section>
-				</div> --> -->
-				-->
+				</div> --> 
+			
 
 				<footer class="major container medium">
 					<h3>About Me</h3>
 					<p>I started my coding adventure by studying javascript. I then dived into html and css shortly. Not soon after I 
 						decided that I wanted to increase my programming knowledge and joined Lambda School. A year and a half after that decision, I can honestly say that I have no regrets. </p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
 				</footer>
 
@@ -272,16 +270,9 @@
 					</form>
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://github.com/jblack186" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
 
 				</div>
 			</div>
