--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/tenantMovie.mov" autoplay controls ></video>
 						<div class="content">
 							<h3>RentLords</h3>
-							<p>In this application, landlords and tenants connect to discuss any issues with the property. Landlords can easily stay on top of problems and notify their tenants once they recieved the complaint and when it is completed.</p>
+							<p>In this application, I used React on the frontend and Node on the backend. I used MongoDB to manage users and their issues. Google authentication was used for registering and logging in users. Landlords and tenants connect to discuss any issues with the property. Landlords can easily stay on top of problems and notify their tenants once they recieved the complaint and when it is completed.</p>
 							<a href="https://github.com/jblack186/rentlords" ><button class="git" >View on Github </button></a>
 							<a href="https://floating-lake-21994.herokuapp.com/login"><button class="live">View Live Version</button></a>
 
@@ -67,7 +67,7 @@
 						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/shirtStr.mov" autoplay controls ></video>
 						<div class="content">
 							<h3>ShirtTown</h3>
-							<p>This eccommerce site was built with React on the front end and SQL on the backend. </p>
+							<p>This eccommerce site was built with React on the front end and Node on the backend. I used an SQL database to manage the items in the store.</p>
 							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
 							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
 					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
