added html emails

--- a/index.html
+++ b/index.html
@@ -86,6 +86,36 @@
 					</section> -->
 				</div>
 
+				<div class="box alt container">
+					<section class="feature left">
+						<img src="./Screen Shot 2020-08-16 at 8.21.55 PM.png" class="image icon solid fa-mobile-alt" alt='html-email' />
+						<div class="content">
+							<h3>HTML Emails</h3>
+							<p>I make clean HTML emails and landing pages. </p>
+
+		
+						</div>
+					</section>
+					<section class="feature right">
+						<img src="./Screen Shot 2020-08-16 at 8.19.22 PM.png" class="image icon solid fa-mobile-alt" alt='transactional-email' />
+						<div class="content">
+							<h3>I DO IT ALL!</h3>
+					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
+							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
+
+
+
+						</div>
+					</section>
+					<!-- <section class="feature left">
+						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>The Third Thing</h3>
+							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+						</div>
+					</section> -->
+				</div>
+
 				<!--
 				 <div class="box container">
 					<header>
