--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
 
 						</div>
 					</section>
+					<section class="feature left">
+						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/pta-site.mov" autoplay controls ></video>
+						<div class="content">
+							<h3>CLEAN DESIGNS!</h3>
+							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
+							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
+					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
+							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
+
+
+
+						</div>
+					</section>
+
 					<!-- <section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
