fixed hero section

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		<div id="wrapper">
 			<section class="intro">
 				<header>
-					<h1>Hi,</h1>
-					<p>My name is Jamison. Creating value with code is what I'm passionate about.</p>
+					<h1 id="hero-text">Hi,</h1>
+					<p id="hero-text">My name is Jamison. Creating value with code is what I'm passionate about.</p>
 					<ul class="actions">
 						<!-- <li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li> -->
 					</ul>
 				</header>
 				<div class="content">
-					<span class="image fill" data-position="center"><img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" /></span>
+					<span class="image fill" data-position="center"><img src="./images/portfolio-hero.jpg" alt="" /></span>
 				</div>
 			</section>
 		</div>
