--- a/index.html
+++ b/index.html
@@ -111,11 +111,16 @@
 						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/pta-site.mov" autoplay controls ></video>
 						<div class="content">
 							<h3>CLEAN DESIGNS!</h3>
-							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
-							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
-					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
-							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
 
+
+
+						</div>
+					</section>
+					<section class="feature right">
+						<video class="image icon solid fa-mobile-alt" src="./wowzers-recording.mov" autoplay controls ></video>
+						<div class="content">
+							<h3>WOWZERS</h3>
+							<p>Coming Soon! I'm currently in the planning stages of this app. The app will be a full stack react app. I will authenticate users through google but I'll also collect email addresses and user info in the sign up process. The backend will be done through MongoDB. This app will allow users to enter health goals and offer them recipes to achieve this.</p>
 
 
 						</div>
