fixed contact section

--- a/index.html
+++ b/index.html
@@ -293,11 +293,10 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>CONTACT ME</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>If I sound like a good fit for your company, feel free to contact me below. Or contact me by email: blackwellj1040@gmail.com or by phone: 203.362.9135 </p>
 
 					<form onload=alert(Thankyou) method="post" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc1O_aafayH8TkV7cUR33qJAbMLueK415ZWtjKv2Ozp7TqthQ/formResponse">
 						<div class="row">
