added new wowzer

--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
 					<section class="feature right">
 						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/Screen Recording 2020-08-30 at 4.50.58 AM.mov" autoplay controls ></video>
 						<div class="content">
-							<h3>ShirtTown</h3>
-							<p>This eccommerce site was built with React on the front end and Node on the backend. I used an SQL database to manage the items in the store.</p>
-							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
-							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
-					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
-							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
+							<h3>Wowzers</h3>
+							<p>This site is still under construction. I am building it with React. I am using a 3rd party api to allow users to obtain recipes for their chosen diets.</p>
+							<a href="https://github.com/jblack186/Wowzers" ><button class='git'>View on Github</button></a>
+							<a href="https://pedantic-swirles-0f5272.netlify.app/home/" ><button class='live'>View Live Version</button></a>
 
 
 
@@ -81,7 +79,7 @@
 					<section class="feature right">
 						<video class="image icon solid fa-mobile-alt" src="./assets/css/video/shirtStr.mov" autoplay controls ></video>
 						<div class="content">
-							<h3>ShirtTown</h3>
+							<h3>BestFit</h3>
 							<p>This eccommerce site was built with React on the front end and Node on the backend. I used an SQL database to manage the items in the store.</p>
 							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
 							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
