changed about me

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				<footer class="major container medium">
 					<h3>About Me</h3>
 					<p>I started my coding adventure by studying javascript. I then dived into html and css shortly. Not soon after I 
-						decided that I wanted to increase my programming knowledge and joined Lambda School. A year and a half after that decision, I can honestly say that I have no regrets. </p>
+						decided that I wanted to increase my programming knowledge and joined Lambda School. 2 years after that decision, I can honestly say that I have no regrets. </p>
 					<ul class="actions special">
 					</ul>
 				</footer>
