--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 						<div class="content">
 							<h3>Wowzers</h3>
 							<p>This site is still under construction. I am building it with React. I am using a 3rd party api to allow users to obtain recipes for their chosen diets.</p>
-							<a href="https://github.com/jblack186/Wowzers" ><button class='git'>View on Github</button></a>
-							<a href="https://pedantic-swirles-0f5272.netlify.app/home/" ><button class='live'>View Live Version</button></a>
-
+							<div class="buttns">
+								<a href="https://github.com/jblack186/Wowzers" ><button class='git'>View on Github</button></a>
+								<a href="https://pedantic-swirles-0f5272.netlify.app/home/" ><button class='live'>View Live Version</button></a>
+						  </div>
 
 
 						</div>
@@ -70,8 +71,10 @@
 						<div class="content">
 							<h3>RentLords</h3>
 							<p>In this application, I used React on the frontend and Node on the backend. I used MongoDB to manage users and their issues. Google authentication was used for registering and logging in users. Landlords and tenants connect to discuss any issues with the property. Landlords can easily stay on top of problems and notify their tenants once they recieved the complaint and when it is completed.</p>
-							<a href="https://github.com/jblack186/rentlords" ><button class="git" >View on Github </button></a>
-							<a href="https://floating-lake-21994.herokuapp.com/login"><button class="live">View Live Version</button></a>
+							<div class="buttns">
+								<a href="https://github.com/jblack186/rentlords" ><button class="git" >View on Github </button></a>
+								<a href="https://floating-lake-21994.herokuapp.com/login"><button class="live">View Live Version</button></a>
+							</div>
 
 		
 						</div>
@@ -81,8 +84,10 @@
 						<div class="content">
 							<h3>BestFit</h3>
 							<p>This eccommerce site was built with React on the front end and Node on the backend. I used an SQL database to manage the items in the store.</p>
-							<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
-							<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
+							<div class="buttns">
+								<a href="https://github.com/jblack186/ecommerce-site" ><button class='git'>View on Github</button></a>
+								<a href="https://unruffled-mclean-d98c5a.netlify.app/" ><button class='live'>View Live Version</button></a>
+							</div>
 					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
 							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
 
@@ -105,17 +110,20 @@
 						<div class="content">
 							<h3>HTML Emails</h3>
 							<p>I make clean HTML emails and landing pages. </p>
-
-		
+							<div class="buttns">
+								<a href="https://wizardly-pike-8753ee.netlify.app/
+								" ><button class='live'>View Live Version</button></a>
+							</div>
 						</div>
 					</section>
 					<section class="feature right">
 						<img src="./Screen Shot 2020-08-16 at 8.19.22 PM.png" class="image icon solid fa-mobile-alt" alt='transactional-email' />
 						<div class="content">
 							<h3>I DO IT ALL!</h3>
-					<!-- <li><a href="#" class="fab fa-react"><span class="label"></span></a></li>
-							<li><a href="#" class="fab fa-node"><span class="label"></span></a></li> -->
-
+							<div class="buttns">
+								<a href="https://elastic-wilson-d62422.netlify.app/
+								" ><button class='live'>View Live Version</button></a>
+							</div>
 
 
 						</div>
